# cloud-music-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  zbpack.json  zeabur.json
src/cloud_music_mcp/: __init__.py  api.py  main.py
src/cloud_music_mcp/storage/: cookies.json
